Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_import_duplicate_fn.flow
import "../../std/math.flow"
import "../../std/other_math.flow"

program bad_import_duplicate_fn

main {
    one : int(1)
    print one
}
